<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalculator</string>
    <string name="info">XXX学校XXX毕业设计</string>
	<string name="btn_to_calculator">科学计算</string>
	<string name="btn_to_numberconversion">进制转换</string>
	<string name="btn_to_unitdeformation">单位换算</string>
	<string name="btn_to_datecalctlator">日期计算</string>
	<string name="btn_viewfilpper">高级功能</string>
	<string name="btn_c">AC</string>
	<string name="btn_del">DEL</string>
	<string name="btn_1">1</string>
	<string name="btn_2">2</string>
	<string name="btn_3">3</string>
	<string name="btn_4">4</string>
	<string name="btn_5">5</string>
	<string name="btn_6">6</string>
	<string name="btn_7">7</string>
	<string name="btn_8">8</string>
	<string name="btn_9">9</string>
	<string name="btn_0">0</string>
	<string name="btn_plus">＋</string>
	<string name="btn_minus">－</string>
	<string name="btn_times">×</string>
	<string name="btn_divide">÷</string>
	<string name="btn_dot">.</string>
	<string name="btn_equals">=</string>
	<string name="btn_sin">sin</string>
	<string name="btn_cos">cos</string>
	<string name="btn_tan">tan</string>
	<string name="btn_arcsin">arcsin</string>
	<string name="btn_arccos">arccos</string>
	<string name="btn_arctan">arctan</string>
	<string name="btn_sqrt">√</string>
	<string name="btn_PI">π</string>
	<string name="btn_sqr">^2</string>
	<string name="btn_numberE">e</string>
	<string name="btn_lg">lg</string>
	<string name="btn_ln">ln</string>
	<string name="btn_A">A</string>
	<string name="btn_B">B</string>
	<string name="btn_C">C</string>
	<string name="btn_D">D</string>
	<string name="btn_E">E</string>
	<string name="btn_F">F</string>
	<string name="btn_two">二</string>
	<string name="btn_eight">八</string>
	<string name="btn_ten">十</string>
	<string name="btn_sixteen">十六</string>	
	<string name="tv">十进制</string>
	<string name="tv_2">未设置</string>		
	<string name="btn_to_MASS">质量</string>
	<string name="btn_to_LENGTH">长度</string>
	<string name="btn_to_SQUARE">面积</string>
	<string name="btn_to_MONEY">货币</string>
	<string name="dangwei">未设置</string>
</resources>
