<?xml version="1.0" encoding="utf-8"?>
<!-- 界面设计为LinearLayout嵌套ViewFlipper ViewFlipper内再嵌套Tablelayout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 用来显示计算结果的EditText -->
    <EditText
        android:id="@+id/et" 
        android:inputType="none"
        android:focusable="false"
        android:textSize="50sp"
        android:textColor="#FFFFFF" 
        android:background="#333333"
        android:layout_gravity="center"
        android:gravity="right"
        android:cursorVisible="true"
        android:scrollHorizontally="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />
    <!-- 用来显示ViewFlipper的翻页按钮以及清空按钮 -->
	<RelativeLayout 
        android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:background="#FFCCCC">
    <Button 
        android:id="@+id/btn_viewfilpper"
        android:layout_width="150dp"
    	android:layout_height="fill_parent"
    	android:layout_alignParentLeft="true"
    	android:gravity="center"
        android:text="@string/btn_viewfilpper"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFFFFF" 
        android:background="#CC3333"
        />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#CC3333"
        android:gravity="center"
        android:text="@string/btn_del"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_del"
        android:layout_toRightOf="@+id/btn_viewfilpper"
        android:background="#CC3333"
        android:gravity="center"
        android:text="@string/btn_c"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

	</RelativeLayout>
	
	<ViewFlipper android:id="@+id/viewflipper_id"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
    
    <!--ViewFlipper中的第一个元素 -->
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
            <TableRow 
            android:layout_weight="1"
             >
            <Button
                android:id="@+id/btn_7"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_7"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_8"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_9"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_9"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_divide"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_divide"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
        </TableRow>
        <TableRow 
            android:layout_weight="1"
             >
            <Button
                android:id="@+id/btn_4"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_4"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />

            <Button
                android:id="@+id/btn_5"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_5"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_6"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_6"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_times"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_times"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
        </TableRow>
        <TableRow 
            android:layout_weight="1"
             >
            <Button
                android:id="@+id/btn_1"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_1"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />

            <Button
                android:id="@+id/btn_2"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_2"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_3"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_3"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_minus"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_minus"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
        </TableRow>
        <TableRow 
            android:layout_weight="1"
             >
            <Button
                android:id="@+id/btn_dot"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_dot"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />

            <Button
                android:id="@+id/btn_0"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FFCCCC"
                android:text="@string/btn_0"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_equals"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#CC0033"
                android:text="@string/btn_equals"
                android:textSize="50sp"
        		android:textColor="#FFFFFF"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_plus"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_plus"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            
        </TableRow>
    </TableLayout>
    <!--ViewFlipper中的第二个元素 -->
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow 
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_sin"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_sin"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_cos"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_cos"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_tan"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_tan"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            </TableRow>
            <TableRow 
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_arcsin"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_arcsin"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_arccos"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_arccos"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_arctan"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_arctan"
                android:textSize="40sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            </TableRow>
            <TableRow 
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_sqrt"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_sqrt"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_sqr"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_sqr"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_PI"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_PI"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            </TableRow>
            <TableRow 
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_E"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_numberE"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_ln"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_ln"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            <Button
                android:id="@+id/btn_lg"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:background="#FF9999"
                android:text="@string/btn_lg"
                android:textSize="50sp"
        		android:textColor="#CC0033"
        		android:textStyle="bold" />
            </TableRow>
            
    </TableLayout>
	</ViewFlipper>
</LinearLayout>
